// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders 1`] = `
<div
  className="progress"
>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow={0}
    className="progress-bar"
    role="progressbar"
    style={
      Object {
        "width": "0%",
      }
    }
  />
</div>
`;

exports[`it renders 2`] = `
<div
  className="progress"
>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow={50}
    className="progress-bar"
    role="progressbar"
    style={
      Object {
        "width": "50%",
      }
    }
  />
</div>
`;

exports[`it renders 3`] = `
<div
  className="progress"
>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow={100}
    className="progress-bar"
    role="progressbar"
    style={
      Object {
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`it renders 4`] = `
<div
  className="progress"
>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow={0}
    className="progress-bar"
    role="progressbar"
    style={
      Object {
        "width": "0%",
      }
    }
  />
</div>
`;
